--- a/src/main/webapp/vistas/procesoratificacion/Edit.xhtml
+++ b/src/main/webapp/vistas/procesoratificacion/Edit.xhtml
@@ -8,46 +8,40 @@
 
     <ui:composition>
 
-        <p:dialog id="ProcesoratificacionEditDlg" widgetVar="ProcesoratificacionEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditProcesoratificacionTitle}">
+        <p:dialog id="ProcesoratificacionEditDlg" widgetVar="ProcesoratificacionEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditProcesoratificacionTitle}" responsive="true">
             <h:form id="ProcesoratificacionEditForm">
                 <h:panelGroup id="display">
-                    <p:panelGrid columns="2" rendered="#{procesoratificacionController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditProcesoratificacionLabel_idprocesor}" for="idprocesor" />
-                        <p:inputText id="idprocesor" value="#{procesoratificacionController.selected.idprocesor}" title="#{bundle.EditProcesoratificacionTitle_idprocesor}" required="true" requiredMessage="#{bundle.EditProcesoratificacionRequiredMessage_idprocesor}"/>
-                        <p:outputLabel value="#{bundle.EditProcesoratificacionLabel_freceprati}" for="freceprati" />
-                        <p:calendar id="freceprati" pattern="MM/dd/yyyy" value="#{procesoratificacionController.selected.freceprati}" title="#{bundle.EditProcesoratificacionTitle_freceprati}"  showOn="button"/>
-                        <p:outputLabel value="#{bundle.EditProcesoratificacionLabel_cambios}" for="cambios" />
+                    <div class="ui-fluid">
+                    <p:panelGrid columns="2" rendered="#{procesoratificacionController.selected != null}" layout="grid" columnClasses="ui-grid-col-5,ui-grid-col-14" styleClass="ui-panelgrid-blank">
+                        <p:outputLabel value="#{bundle.ProcesoratificacionLabel_idratificacion}" for="idratificacion" />
+                        <p:inputText id="idratificacion" value="#{procesoratificacionController.selected.idratificacion}" title="#{bundle.ProcesoratificacionTitle_idratificacion}" disabled="true" />                      
+                        <p:outputLabel value="#{bundle.ProcesoratificacionLabel_gestor}" for="gestor" />
+                        <p:inputText id="gestor" value="#{procesoratificacionController.selected.gestor}" title="#{bundle.ProcesoratificacionTitle_gestor}" disabled="true" />                      
+                        <p:outputLabel value="#{bundle.ProcesoratificacionLabel_freceprati}" for="freceprati" />
+                        <p:calendar id="freceprati" pattern="MM/dd/yyyy" value="#{procesoratificacionController.selected.freceprati}" title="#{bundle.ProcesoratificacionTitle_freceprati}"/>
+                        <p:outputLabel value="#{bundle.ProcesoratificacionLabel_cambios}" for="cambios" />
                         <p:selectBooleanCheckbox id="cambios" value="#{procesoratificacionController.selected.cambios}" />
-                        <p:outputLabel value="#{bundle.EditProcesoratificacionLabel_status}" for="status" />
-                        <p:inputText id="status" value="#{procesoratificacionController.selected.status}" title="#{bundle.EditProcesoratificacionTitle_status}" />
-                        <p:outputLabel value="#{bundle.EditProcesoratificacionLabel_comentarios}" for="comentarios" />
-                        <p:inputText id="comentarios" value="#{procesoratificacionController.selected.comentarios}" title="#{bundle.EditProcesoratificacionTitle_comentarios}" />
-                        <p:outputLabel value="#{bundle.EditProcesoratificacionLabel_fechaEnvioclaves}" for="fechaEnvioclaves" />
-                        <p:calendar id="fechaEnvioclaves" pattern="MM/dd/yyyy" value="#{procesoratificacionController.selected.fechaEnvioclaves}" title="#{bundle.EditProcesoratificacionTitle_fechaEnvioclaves}"  showOn="button"/>
-                        <p:outputLabel value="#{bundle.EditProcesoratificacionLabel_fechaConficlaves}" for="fechaConficlaves" />
-                        <p:calendar id="fechaConficlaves" pattern="MM/dd/yyyy" value="#{procesoratificacionController.selected.fechaConficlaves}" title="#{bundle.EditProcesoratificacionTitle_fechaConficlaves}"  showOn="button"/>
-                        <p:outputLabel value="#{bundle.EditProcesoratificacionLabel_proceso}" for="proceso" />
-                        <p:inputText id="proceso" value="#{procesoratificacionController.selected.proceso}" title="#{bundle.EditProcesoratificacionTitle_proceso}" />
-                        <p:outputLabel value="#{bundle.EditProcesoratificacionLabel_documentacion}" for="documentacion" />
-                        <p:inputText id="documentacion" value="#{procesoratificacionController.selected.documentacion}" title="#{bundle.EditProcesoratificacionTitle_documentacion}" />
-                        <p:outputLabel value="#{bundle.EditProcesoratificacionLabel_idratificacion}" for="idratificacion" />
-                        <p:selectOneMenu id="idratificacion" value="#{procesoratificacionController.selected.idratificacion}" >
-                            <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
-                            <f:selectItems value="#{ratificacionesController.itemsAvailableSelectOne}"
-                                           var="idratificacionItem"
-                                           itemValue="#{idratificacionItem}"/>
+                        <p:outputLabel value="#{bundle.ProcesoratificacionLabel_status}" for="status" />
+                        <p:selectOneMenu id="status" value="#{procesoratificacionController.selected.status}" title="#{bundle.ProcesoratificacionTitle_status}" disabled="#{procesoratificacionController.selected.status=='activo'||procesoratificacionController.selected.status=='baja'}">                           
+                            <f:selectItem itemLabel="activo" itemValue="activo" />
+                            <f:selectItem itemLabel="baja" itemValue="baja" />
+                            <f:selectItem itemLabel="pendiente" itemValue="pendiente" />
                         </p:selectOneMenu>
-                        <p:outputLabel value="#{bundle.EditProcesoratificacionLabel_gestor}" for="gestor" />
-                        <p:selectOneMenu id="gestor" value="#{procesoratificacionController.selected.gestor}" >
-                            <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
-                            <f:selectItems value="#{gestoresController.itemsAvailableSelectOne}"
-                                           var="gestorItem"
-                                           itemValue="#{gestorItem}"/>
-                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.ProcesoratificacionLabel_comentarios}" for="comentarios" />
+                        <p:inputText id="comentarios" value="#{procesoratificacionController.selected.comentarios}" title="#{bundle.ProcesoratificacionTitle_comentarios}" />
+                        <p:outputLabel value="#{bundle.ProcesoratificacionLabel_fechaEnvioclaves}" for="fechaEnvioclaves" />
+                        <p:calendar id="fechaEnvioclaves" pattern="MM/dd/yyyy" value="#{procesoratificacionController.selected.fechaEnvioclaves}" title="#{bundle.ProcesoratificacionTitle_fechaEnvioclaves}"/>
+                        <p:outputLabel value="#{bundle.ProcesoratificacionLabel_fechaConficlaves}" for="fechaConficlaves" />
+                        <p:calendar id="fechaConficlaves" pattern="MM/dd/yyyy" value="#{procesoratificacionController.selected.fechaConficlaves}" title="#{bundle.ProcesoratificacionTitle_fechaConficlaves}"/>
+                        <p:outputLabel value="#{bundle.ProcesoratificacionLabel_proceso}" for="proceso" />
+                        <p:inputText id="proceso" value="#{procesoratificacionController.selected.proceso}" title="#{bundle.ProcesoratificacionTitle_proceso}" />
+                        <p:outputLabel value="#{bundle.ProcesoratificacionLabel_documentacion}" for="documentacion" />
+                        <p:inputText id="documentacion" value="#{procesoratificacionController.selected.documentacion}" title="#{bundle.ProcesoratificacionTitle_documentacion}" />
+                        
                     </p:panelGrid>
+                    </div>  
                     <p:commandButton actionListener="#{procesoratificacionController.update}" value="#{bundle.Save}" update="display,:ProcesoratificacionListForm:datalist,:growl" oncomplete="handleSubmit(args, 'ProcesoratificacionEditDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="ProcesoratificacionEditDialog.hide()"/>
-                </h:panelGroup>
+                    </h:panelGroup>
             </h:form>
         </p:dialog>
 
