--- a/src/main/webapp/vistas/ratificaciones/Create.xhtml
+++ b/src/main/webapp/vistas/ratificaciones/Create.xhtml
@@ -7,29 +7,30 @@
 
     <ui:composition>
 
-        <p:dialog id="RatificacionesCreateDlg" widgetVar="RatificacionesCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateRatificacionesTitle}">
+        <p:dialog id="RatificacionesCreateDlg" widgetVar="RatificacionesCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateRatificacionesTitle}" responsive="true">
             <h:form id="RatificacionesCreateForm">
                 <h:panelGroup id="display">
-                    <p:panelGrid columns="2" rendered="#{ratificacionesController.selected != null}">
-                        <p:outputLabel value="#{bundle.CreateRatificacionesLabel_idratificacion}" for="idratificacion" />
-                        <p:inputText id="idratificacion" value="#{ratificacionesController.selected.idratificacion}" title="#{bundle.CreateRatificacionesTitle_idratificacion}" required="true" requiredMessage="#{bundle.CreateRatificacionesRequiredMessage_idratificacion}"/>
-                        <p:outputLabel value="#{bundle.CreateRatificacionesLabel_anio}" for="anio" />
-                        <p:calendar id="anio" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.anio}" title="#{bundle.EditRatificacionesTitle_anio}" required="true" requiredMessage="#{bundle.EditRatificacionesRequiredMessage_anio}" showOn="button"/>
-                        <p:outputLabel value="#{bundle.CreateRatificacionesLabel_inicio}" for="inicio" />
-                        <p:calendar id="inicio" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.inicio}" title="#{bundle.EditRatificacionesTitle_inicio}"  showOn="button"/>
-                        <p:outputLabel value="#{bundle.CreateRatificacionesLabel_fin}" for="fin" />
-                        <p:calendar id="fin" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.fin}" title="#{bundle.EditRatificacionesTitle_fin}"  showOn="button"/>
-                        <p:outputLabel value="#{bundle.CreateRatificacionesLabel_responsables}" for="responsables" />
-                        <p:inputText id="responsables" value="#{ratificacionesController.selected.responsables}" title="#{bundle.CreateRatificacionesTitle_responsables}" />
-                        <p:outputLabel value="#{bundle.CreateRatificacionesLabel_responsablee}" for="responsablee" />
-                        <p:inputText id="responsablee" value="#{ratificacionesController.selected.responsablee}" title="#{bundle.CreateRatificacionesTitle_responsablee}" />
-                        <p:outputLabel value="#{bundle.CreateRatificacionesLabel_comentarios}" for="comentarios" />
-                        <p:inputText id="comentarios" value="#{ratificacionesController.selected.comentarios}" title="#{bundle.CreateRatificacionesTitle_comentarios}" />
-                        <p:outputLabel value="#{bundle.CreateRatificacionesLabel_status}" for="status" />
+                    <div class="ui-fluid">
+                    <p:panelGrid columns="2" rendered="#{ratificacionesController.selected != null}" layout="grid" columnClasses="ui-grid-col-5,ui-grid-col-14" styleClass="ui-panelgrid-blank">
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_idratificacion}" for="idratificacion" />
+                        <p:inputText id="idratificacion" value="#{ratificacionesController.selected.idratificacion}" title="#{bundle.RatificacionesTitle_idratificacion}" required="true" requiredMessage="#{bundle.RatificacionesRequiredMessage_idratificacion}"/>                        
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_anio}" for="anio" />
+                        <p:calendar id="anio" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.anio}" title="#{bundle.RatificacionesTitle_anio}" required="true" requiredMessage="#{bundle.RatificacionesRequiredMessage_anio}"/>
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_inicio}" for="inicio" />
+                        <p:calendar id="inicio" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.inicio}" title="#{bundle.RatificacionesTitle_inicio}"/>
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_fin}" for="fin" />
+                        <p:calendar id="fin" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.fin}" title="#{bundle.RatificacionesTitle_fin}"/>
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_responsables}" for="responsables" />
+                        <p:inputText id="responsables" value="#{ratificacionesController.selected.responsables}" title="#{bundle.RatificacionesTitle_responsables}" />
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_responsablee}" for="responsablee" />
+                        <p:inputText id="responsablee" value="#{ratificacionesController.selected.responsablee}" title="#{bundle.RatificacionesTitle_responsablee}" />
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_comentarios}" for="comentarios" />
+                        <p:inputText id="comentarios" value="#{ratificacionesController.selected.comentarios}" title="#{bundle.RatificacionesTitle_comentarios}" />
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_status}" for="status" />
                         <p:selectBooleanCheckbox id="status" value="#{ratificacionesController.selected.status}" />
                     </p:panelGrid>
+                    </div>
                     <p:commandButton actionListener="#{ratificacionesController.create}" value="#{bundle.Save}" update="display,:RatificacionesListForm:datalist,:growl" oncomplete="handleSubmit(args,'RatificacionesCreateDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="RatificacionesCreateDialog.hide()"/>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
