--- a/src/main/webapp/vistas/ratificaciones/Edit.xhtml
+++ b/src/main/webapp/vistas/ratificaciones/Edit.xhtml
@@ -3,34 +3,34 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
     <ui:composition>
 
-        <p:dialog id="RatificacionesEditDlg" widgetVar="RatificacionesEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditRatificacionesTitle}">
+        <p:dialog id="RatificacionesEditDlg" widgetVar="RatificacionesEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditRatificacionesTitle}" responsive="true">
             <h:form id="RatificacionesEditForm">
                 <h:panelGroup id="display">
-                    <p:panelGrid columns="2" rendered="#{ratificacionesController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditRatificacionesLabel_idratificacion}" for="idratificacion" />
-                        <p:inputText id="idratificacion" value="#{ratificacionesController.selected.idratificacion}" title="#{bundle.EditRatificacionesTitle_idratificacion}" required="true" requiredMessage="#{bundle.EditRatificacionesRequiredMessage_idratificacion}"/>
-                        <p:outputLabel value="#{bundle.EditRatificacionesLabel_anio}" for="anio" />
-                        <p:calendar id="anio" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.anio}" title="#{bundle.EditRatificacionesTitle_anio}" required="true" requiredMessage="#{bundle.EditRatificacionesRequiredMessage_anio}" showOn="button"/>
-                        <p:outputLabel value="#{bundle.EditRatificacionesLabel_inicio}" for="inicio" />
-                        <p:calendar id="inicio" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.inicio}" title="#{bundle.EditRatificacionesTitle_inicio}"  showOn="button"/>
-                        <p:outputLabel value="#{bundle.EditRatificacionesLabel_fin}" for="fin" />
-                        <p:calendar id="fin" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.fin}" title="#{bundle.EditRatificacionesTitle_fin}"  showOn="button"/>
-                        <p:outputLabel value="#{bundle.EditRatificacionesLabel_responsables}" for="responsables" />
-                        <p:inputText id="responsables" value="#{ratificacionesController.selected.responsables}" title="#{bundle.EditRatificacionesTitle_responsables}" />
-                        <p:outputLabel value="#{bundle.EditRatificacionesLabel_responsablee}" for="responsablee" />
-                        <p:inputText id="responsablee" value="#{ratificacionesController.selected.responsablee}" title="#{bundle.EditRatificacionesTitle_responsablee}" />
-                        <p:outputLabel value="#{bundle.EditRatificacionesLabel_comentarios}" for="comentarios" />
-                        <p:inputText id="comentarios" value="#{ratificacionesController.selected.comentarios}" title="#{bundle.EditRatificacionesTitle_comentarios}" />
-                        <p:outputLabel value="#{bundle.EditRatificacionesLabel_status}" for="status" />
+                    <div class="ui-fluid">
+                    <p:panelGrid columns="2" rendered="#{ratificacionesController.selected != null}" layout="grid" columnClasses="ui-grid-col-5,ui-grid-col-14" styleClass="ui-panelgrid-blank">
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_idratificacion}" for="idratificacion" />
+                        <p:inputText id="idratificacion" value="#{ratificacionesController.selected.idratificacion}" title="#{bundle.RatificacionesTitle_idratificacion}" required="true" requiredMessage="#{bundle.RatificacionesRequiredMessage_idratificacion}" disabled="true"/>
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_anio}" for="anio" />
+                        <p:calendar id="anio" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.anio}" title="#{bundle.RatificacionesTitle_anio}" required="true" requiredMessage="#{bundle.RatificacionesRequiredMessage_anio}"/>
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_inicio}" for="inicio" />
+                        <p:calendar id="inicio" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.inicio}" title="#{bundle.RatificacionesTitle_inicio}"/>
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_fin}" for="fin" />
+                        <p:calendar id="fin" pattern="MM/dd/yyyy" value="#{ratificacionesController.selected.fin}" title="#{bundle.RatificacionesTitle_fin}"/>
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_responsables}" for="responsables" />
+                        <p:inputText id="responsables" value="#{ratificacionesController.selected.responsables}" title="#{bundle.RatificacionesTitle_responsables}" />
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_responsablee}" for="responsablee" />
+                        <p:inputText id="responsablee" value="#{ratificacionesController.selected.responsablee}" title="#{bundle.RatificacionesTitle_responsablee}" />
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_comentarios}" for="comentarios" />
+                        <p:inputText id="comentarios" value="#{ratificacionesController.selected.comentarios}" title="#{bundle.RatificacionesTitle_comentarios}" />
+                        <p:outputLabel value="#{bundle.RatificacionesLabel_status}" for="status" />
                         <p:selectBooleanCheckbox id="status" value="#{ratificacionesController.selected.status}" />
                     </p:panelGrid>
+                    </div>
                     <p:commandButton actionListener="#{ratificacionesController.update}" value="#{bundle.Save}" update="display,:RatificacionesListForm:datalist,:growl" oncomplete="handleSubmit(args, 'RatificacionesEditDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="RatificacionesEditDialog.hide()"/>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
